# zettelkasten-refactor-tool

./: .gitignore  .gitmodules  .tarpaulin.toml  .zrtignore  Cargo.toml  LICENSE  PROCESS.md  README.md  bacon.toml  clippy.toml
.cargo/: config.toml
src/: cli.rs  core.rs  lib.rs  list.rs  main.rs  models.rs  utils.rs
src/core/: ignore.rs  mod.rs  scanner.rs
src/core/ignore/: loader.rs  patterns.rs
src/core/scanner/: pattern.rs  test_utils.rs  word.rs
src/models/: comparison_stats.rs  file_word_count.rs  single_pattern_stats.rs
tests/: acceptance_tests.rs  cli.rs  integration_tests.rs
tests/integration_tests/: common.rs  edge_cases_test.rs  file_operations_test.rs  frontmatter_test.rs  ignore_patterns_test.rs  integration_tests.rs  scanning_test.rs  word_counting_test.rs
zrt/: Cargo.toml  README.md
zrt-tagging/: Cargo.toml
zrt-tagging/.zrt/models/: tfidf_model.json
zrt-tagging/src/: config.rs  embedding.rs  embedding_cache.rs  embedding_knn.rs  extraction.rs  lib.rs  model.rs  prediction.rs  tfidf.rs  unified_predictor.rs
zrt/src/: cli.rs  core.rs  lib.rs  main.rs  models.rs  settings.rs  utils.rs
zrt/src/cli/: evaluation_tests.rs  integration_tests.rs
zrt/src/connected/: cli.rs  mod.rs  spec.yaml
zrt/src/core/: ignore.rs  mod.rs  scanner.rs
zrt/src/core/filter/: utils.rs
zrt/src/core/frontmatter/: SPEC.md  mod.rs
zrt/src/core/ignore/: loader.rs  mod.rs  patterns.rs
zrt/src/core/scanner/: SPEC.md  file.rs  pattern.rs  utils.rs  word.rs
zrt/src/core/strip_frontmatter/: mod.rs
zrt/src/count/: SPEC.md  cli.rs  mod.rs
zrt/src/init/: SPEC.md  cli.rs  mod.rs
zrt/src/models/: comparison_stats.rs  file_metrics.rs  file_word_count.rs  frontmatter.rs  single_pattern_stats.rs  word_count_stats.rs
zrt/src/search/: SPEC.md  cli.rs  mod.rs  spec.yaml
zrt/src/similar/: SPEC.md  cli.rs  mod.rs
zrt/src/tags/: cli.rs  mod.rs  spec.yaml
zrt/src/wordcount/: SPEC.md  cli.rs  mod.rs  models.rs  print.rs  word.rs
