[workspace]
members = ["zrt", "zrt-tagging"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
tempfile = "3.17"
glob = "0.3.2"
toml = "0.8.20"
walkdir = "2.5.0"

[workspace.lints.clippy]
# Allow ML dependency version conflicts during development
multiple_crate_versions = "allow"
cargo        = { priority = -1, level = "deny" }
complexity   = { priority = -1, level = "deny" }
correctness  = { priority = -1, level = "deny" }
perf         = { priority = -1, level = "deny" }
suspicious   = { priority = -1, level = "deny" }
style        = { priority = -1, level = "deny" }
pedantic     = { priority = -1, level = "deny" }
restriction  = { priority = -1, level = "deny" }
nursery      = { priority = -1, level = "deny" }

# cargo clippy 2>&1 | grep https://rust-lang.github.io/rust-clippy/master/index.html | sed 's/^.*#//' | sort | uniq | xargs -I % echo '% = "allow"' >> Cargo.toml
blanket_clippy_restriction_lints = "allow"
exhaustive_structs = "allow"
filetype_is_file = "allow"
float_arithmetic = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
print_stdout = "allow"
pub_use = "allow"
question_mark_used = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
single_call_fn = "allow"
# following allowed only for prototying
arbitrary_source_item_ordering = "allow"
as_conversions = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
default_numeric_fallback = "allow"
derivable_impls = "allow"
exhaustive_enums = "allow"
expect_used = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
missing_const_for_fn = "allow"
missing_inline_in_public_items = "allow"
module_name_repetitions = "allow"
std_instead_of_core = "allow"
uninlined_format_args = "allow"
unseparated_literal_suffix = "allow"
unused_self = "allow"
unused_trait_names = "allow"
unwrap_or_default = "allow"
use_self = "allow"
arithmetic_side_effects = "allow"
cast_lossless = "allow"
indexing_slicing = "allow"
iter_over_hash_type = "allow"
option_if_let_else = "allow"
pattern_type_mismatch = "allow"
str_to_string = "allow"
too_many_lines = "allow"
use_debug = "allow"
wildcard_enum_match_arm = "allow"
