[package]
name = "zrt-tagging"
version = "0.1.0"
edition = "2024"
description = "Tag prediction functionality for zettelkasten notes"
license = "MIT"
repository = "https://github.com/craigtkhill/zettelkasten-refactor-tool"
readme = "../README.md"
keywords = ["zettelkasten", "notes", "tagging", "ml"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
tokenizers = "0.21.2"

[lints]
workspace = true
