[package]
name = "zrt"
version = "0.1.0"
description = "A zettelkasten refactoring tool"
authors = ["Craig Hill craigthomashill@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/craigtkhill/zettelkasten-refactor-tool"
keywords = ["zettelkasten", "notes", "refactoring"]
categories = ["command-line-utilities"]

[dependencies]
walkdir = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
tempfile = { workspace = true }
glob = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true